--- a/apps/mini-app/pages/alumni-association/create/create.wxss
+++ b/apps/mini-app/pages/alumni-association/create/create.wxss
@@ -229,6 +229,41 @@ page {
   position: relative;
 }
 
+.logo-options {
+  background-color: #fff;
+}
+
+.radio-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20rpx;
+}
+
+.radio-label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20rpx;
+  font-size: 28rpx;
+  color: #333;
+}
+
+.radio-label radio {
+  transform: scale(0.8);
+  margin-right: 10rpx;
+}
+
+.logo-preview-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 10rpx;
+}
+
+.upload-action {
+  width: 100%;
+  margin-bottom: 20rpx;
+}
+
 .upload-btn {
   border: 1rpx solid #eee;
   padding: 20rpx;
@@ -243,11 +278,44 @@ page {
   line-height: 40rpx;
 }
 
+.logo-preview-wrapper {
+  position: relative;
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 1rpx solid #eee;
+}
+
+.logo-preview {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #f9f9f9;
+}
+
+.logo-delete {
+  position: absolute;
+  top: -15rpx;
+  right: -15rpx;
+  width: 40rpx;
+  height: 40rpx;
+  background-color: rgba(255, 77, 79, 0.9);
+  color: #fff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 32rpx;
+  line-height: 1;
+  z-index: 10;
+}
+
 .uploaded-image {
   width: 200rpx;
   height: 200rpx;
   margin-top: 20rpx;
-  border-radius: 8rpx;
+  border-radius: 50%;
 }
 
 /* 申请材料上传样式 */
